package railway.catalogue.domain.common;

/**
 * 座席区分
 * 自由 or 指定
 */
public enum SeatType {
  FREE,
  RESERVED
}
