package railway.catalogue.domain.common;

/**
 * 列車区分
 * のぞみ or ひかり
 */
public enum TrainType {
  NOZOMI,
  HIKARI
}
